--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-"Hello World"
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hello Shahid</title>
+  </head>
+  <body>
+    <h2>Hello, Shahid</h2>
+  </body>
+</html>
