--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello Shahid</title>
   </head>
+  <meta
+    name="google-site-verification"
+    content="dymbILOZOIsGDE-WhHbbW56rItcscp3a1WowevzPgl8"
+  />
   <body>
     <h2>Hello, Shahid</h2>
   </body>
